WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
130176
WebKit shouldn't crash on uniprocessor machines
https://bugs.webkit.org/show_bug.cgi?id=130176
Summary
WebKit shouldn't crash on uniprocessor machines
Filip Pizlo
Reported
2014-03-12 21:41:24 PDT
Patch forthcoming.
Attachments
the patch
(2.51 KB, patch)
2014-03-12 21:56 PDT
,
Filip Pizlo
msaboff
: review+
fpizlo
: commit-queue+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2014-03-12 21:56:52 PDT
Created
attachment 226574
[details]
the patch
Geoffrey Garen
Comment 2
2014-03-12 22:22:32 PDT
Comment on
attachment 226574
[details]
the patch r=me
Michael Saboff
Comment 3
2014-03-12 22:36:17 PDT
Comment on
attachment 226574
[details]
the patch It seems to me that the "minimum" in computeNumberOfWorkerThreads() is not really the minimum after the subtraction of 1 in Options.h. Could computeNumberOfWorkerThreads() always have a true minimum of 1 and pass 1 or 7 as the maximum? Or subtract the 1 in computeNumberOfWorkerThreads. Seems a little better to have all the min/max calculation in one place, computeNumberOfWorkerThreads.
Michael Saboff
Comment 4
2014-03-12 22:37:25 PDT
Comment on
attachment 226574
[details]
the patch Didn't mean to change the r+ from Geoff.
Filip Pizlo
Comment 5
2014-03-12 22:46:04 PDT
(In reply to
comment #3
)
> (From update of
attachment 226574
[details]
) > It seems to me that the "minimum" in computeNumberOfWorkerThreads() is not really the minimum after the subtraction of 1 in Options.h. Could computeNumberOfWorkerThreads() always have a true minimum of 1 and pass 1 or 7 as the maximum? Or subtract the 1 in computeNumberOfWorkerThreads. Seems a little better to have all the min/max calculation in one place, computeNumberOfWorkerThreads.
Yeah it's weird. It's the result of sharing this function with the GC. The GC wants to know the number of worker threads including the main thread while the JIT wants to know the number of worker threads excluding the main thread. The minus-1 is the exclusion of the main thread.
Filip Pizlo
Comment 6
2014-03-13 12:15:19 PDT
Landed in
http://trac.webkit.org/changeset/165553
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug