WebKit shouldn't crash on uniprocessor machines https://bugs.webkit.org/show_bug.cgi?id=130176

Reviewed by Michael Saboff.

Previously the math for computing the number of JIT compiler threads would come up with
zero threads on uniprocessor machines, and then the Worklist code would assert.

* runtime/Options.cpp:
(JSC::computeNumberOfWorkerThreads):
* runtime/Options.h:



Canonical link: https://commits.webkit.org/148147@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@165553 268f45cc-cd09-0410-ab3c-d52691b4dbfc